Added input system for DG Interface parameters.

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -90,6 +90,8 @@ SOLUTION CONTROL
 #     Equation of State: Incompressible     # sets ipress=-1 matflag(1,n)
      Viscous Control:   Viscous             # replaces navier (0 no, 1 yes)
      Mesh Motion Solver: None		            # None, Fixed, Elastic
+     Mesh Input Source: Flow-driven         # GUI, Hardcoded, Flow-driven
+     Mesh Hardcoded Case Number: 0          # 0 means it is not hardcoded
      Turbulence Model:  No-Model            # No-Model, RANS-SA,
                                             # RANS, RANS-KE,  LES, DES97, DDES 
      Number of Timesteps:    NODEFAULT      # replaces nsteps(1) (ntseq wired =1)
@@ -149,6 +151,19 @@ MATERIAL PROPERTIES
         Stretch X Coordinate Near Outlet: 0 #istretchOutlet
      Lame Constant Lamda: 0.4    # matdat.datelas(5,1,1) For mesh-elastic
      Lame Constant Mu: 0.4       # matdat.datelas(5,1,2) For mesh-elastic
+}
+
+DG INTERFACE
+{
+     DG Interface Velocity Ramping:            Linear   # Options: None, Linear
+     DG Interface Ramping Time:                1.0
+     DG Interface Velocity Model:              Constant   # Options: Constant, Pressure-Based
+     DG Interface Velocity Magnitude:          1.0
+     DG Interface Velocity alpha:              1.0
+     DG Interface Velocity beta:               1.0e-5
+     DG Interface Stability Factor:            1.0      # S coefficient in the 2nd term
+     DG Interface Kinematic Condition epsilon: 1.0e-3
+     DG Interface Kinematic Condition h:       1.0e-2
 }
 
 OUTPUT CONTROL
