Surface tension calculation added to DG

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -132,8 +132,8 @@ MATERIAL PROPERTIES
                                  # ONLY appropriate if no pressure BCs.
      Rotating Frame of Reference: False
      Rotating Frame of Reference Rotation Rate: 0. 0. 0.
-      Surface Tension Option: No	#isurf=0
-#     Surface Tension Option: Yes	#isurf=1
+     Surface Tension Option: No # Yes, No
+     Surface Tension Coefficient: 1.0
 	Maximum Value of Sponge Parameter: 1.0
 	Inflow Cooling Sponge Ends at z: 12.0
 	Outflow Cooling Sponge Begins at z: 24.0
