Adding solid parameters to common files and input.config and input_fform

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -107,11 +107,12 @@ SOLUTION CONTROL
 
 MATERIAL PROPERTIES
 {
-     Number of Materials: 2
-     Material Tags:       10          20
-     Equations of State:  ideal_gas  liquid_1
+     Number of Materials: 3
+     Material Tags:       10          20        30
+     Equations of State:  ideal_gas  liquid_1  solid_1
      Properties of Material 10: 29.0 1.4 1.0 200000.0           # mw,  gamma, mu, kappa (thermal conductivity)
-     Properties of Material 20: 100.0 1.e5 288.0 1100. 1.e-4 4.e-10 0. 0.6   # rho, p, T, cv, alphaP, betaT, mu, Kappa
+     Properties of Material 20: 100.0 1.e5 288.0 1100. 1.e-4 4.e-10 0. 0.6   # rho_ref, p_ref, T_ref, cv, alphaP, betaT, mu, Kappa
+     Properties of Material 30: 1200.0  1.e5 288.0  2600.0 7.7e-5  0.6e9 0.3e9 0.16   # rho_ref, p_ref, T_ref, cv, alphaP, bulkMod, shearMod, Kappa(conductivity) !filled in the propertities of hard rubber
      Shear Law: Constant Viscosity  # ishear=0  => matflag(2,n)
      Bulk Viscosity Law: Constant Bulk Viscosity # ibulk=0 => matflag(3,n)
      Conductivity Law: Constant Conductivity # icond=0 => matflag(4,n)
@@ -247,6 +248,10 @@ DISCRETIZATION CONTROL
 #     Time Integration Rho Infinity: 0.5     # rinf(1) Only used for 2nd order
 
      Scalar Time Integration Rule: First Order      # 1st Order sets rinf(1) -1
+
+     Time Integration Rule for solid: First Order   # 1st Order set rinf_B(1) -1
+#     Time Integration Rule for solid: Second Order # Second Order sets rinf_B next
+#     Time Integration Rho Infinity_B: 0.5          # rinf_B(1) Only used for 2nd order
 
      Predictor at Start of Step : Same Velocity  # ipred=1 (more options later)
       Weak Form: SUPG # alternate is Galerkin only for compressible
