adding a flag to control the output of solid fields (elmB and displacement for solid)

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -103,6 +103,7 @@ SOLUTION CONTROL
                                   # total number of scalars must be <=4
                                   #    impl=10*logical(solflow)+nsclr*100 + 
                                   #          1*logical(solveheat)  
+     Solid Phase : False          # set iSOLID False:-1 True: 1
 } Control
 
 MATERIAL PROPERTIES
