Fixed Vieille's Burning model for phaseChange

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -157,12 +157,12 @@ MATERIAL PROPERTIES
 
 DG INTERFACE
 {
+     Phase Change Model:              Constant   # options: Constant, Vieille's-Burning
+     Burn Rate Exponent alpha:        1.0
+     Burn Rate Coefficient beta:      1.0e-5
      DG Interface Velocity Ramping:            Linear   # Options: None, Linear
      DG Interface Ramping Time:                1.0
-     DG Interface Velocity Model:              Constant   # Options: Constant, Pressure-Based
      DG Interface Velocity Magnitude:          1.0
-     DG Interface Velocity alpha:              1.0
-     DG Interface Velocity beta:               1.0e-5
      DG Interface Stability Factor:            1.0      # S coefficient in the 2nd term
      DG Interface Kinematic Condition epsilon: 1.0e-3
      DG Interface Kinematic Condition h:       1.0e-2
