added probe module to monitor conservative variables

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -157,7 +157,7 @@ MATERIAL PROPERTIES
 
 DG INTERFACE
 {
-     Phase Change Model:              Constant   # options: Constant, Vieille's-Burning
+     Phase Change Model:              Constant   # options: None, Constant, Vieille's-Burning
      Burn Rate Exponent alpha:        1.0
      Burn Rate Coefficient beta:      1.0e-5
      DG Interface Velocity Ramping:            Linear   # Options: None, Linear
