conservation input flag added

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -203,6 +203,7 @@ OUTPUT CONTROL
 #   probe 3 will be treated by rank (numpe-1)-2*(4*16) on another node
 
      Data Block Format : binary #iotype, options 'binary','ascii'
+     Conservation Probe: No
 }
 
 LINEAR SOLVER
