added reference pressure to vieille's law

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -160,6 +160,7 @@ DG INTERFACE
      Phase Change Model:              Constant   # options: None, Constant, Vieille's-Burning
      Burn Rate Exponent alpha:        1.0
      Burn Rate Coefficient beta:      1.0e-5
+     Burn Rate Reference Pressure:    1.0e6
      DG Interface Velocity Ramping:            Linear   # Options: None, Linear
      DG Interface Ramping Time:                1.0
      DG Interface Velocity Magnitude:          1.0
