input etolelas from solver.inp

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -223,6 +223,7 @@ LINEAR SOLVER
      Number of Krylov Vectors per GMRES Sweep: 50           # replaces Kspace
      Number of Solves per Left-hand-side Formation: 1  #nupdat/LHSupd(1)
      Tolerance on Momentum Equations: 0.1                   # epstol(1)
+     Tolerance on Mesh Elasticity Equations: 1.0e-4    # etolelas
      Number of Solves of Temperature per Left-hand-side Formation: 1 
      Temperature Solver Tolerance: 0.001
      Number of Solves of Scalar 1 per Left-hand-side Formation: 1 
