--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -157,10 +157,13 @@ MATERIAL PROPERTIES
 
 DG INTERFACE
 {
-     Phase Change Model:              Constant   # options: None, Constant, Vieille's-Burning
+     Phase Change Model:              Constant   # options: None, Constant, Clausius-Clapeyron, Vieille's-Burning
      Burn Rate Exponent alpha:        1.0
      Burn Rate Coefficient beta:      1.0e-5
      Burn Rate Reference Pressure:    1.0e6
+     Enthlpy of Vaporization:         40.66e3    # [J/mol.K]
+     Molecular Weight of Liquid:      18         # [g/mol]
+     Boiling Temperature:             373        # [K]
      DG Interface Velocity Ramping:            Linear   # Options: None, Linear
      DG Interface Ramping Time:                1.0
      DG Interface Velocity Magnitude:          1.0
