--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -161,7 +161,7 @@ DG INTERFACE
      Burn Rate Exponent alpha:        1.0
      Burn Rate Coefficient beta:      1.0e-5
      Burn Rate Reference Pressure:    1.0e6
-     Enthlpy of Vaporization:         40.66e3    # [J/mol.K]
+     Enthalpy of Vaporization:         40.66e3    # [J/mol.K]
      Molecular Weight of Liquid:      18         # [g/mol]
      Boiling Temperature:             373        # [K]
      DG Interface Velocity Ramping:            Linear   # Options: None, Linear
