--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -167,9 +167,9 @@ DG INTERFACE
      DG Interface Velocity Ramping:            Linear   # Options: None, Linear
      DG Interface Ramping Time:                1.0
      DG Interface Velocity Magnitude:          1.0
-     DG Interface Stability Factor:            1.0      # S coefficient in the 2nd term
-     DG Interface Kinematic Condition epsilon: 1.0e-3
-     DG Interface Kinematic Condition h:       1.0e-2
+     DG Interface Kinematic Condition S:       1.0      # S coefficient in the 2nd term
+     DG Interface Penalty Factor epsilon:      1.0e-3
+     DG Interface Penalty Factor h:            1.0e-2
 }
 
 OUTPUT CONTROL
