add input blfactor to control the stiffness of wedge elements

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -199,6 +199,7 @@ OUTPUT CONTROL
 # or mark the boundary layer base in GUI with surf ID
      BL base Surface ID option: False     # useBLbaseSrfID: False, True
 	 BL base Surface ID: 81               # BLbaseSrfID; Set the surf ID in GUI
+	 Wedge Stiffness Factor: 1.0         # blfactor; used in elas solver
 
      Ranks per core: 1 # for varts only
      Cores per node: 1 # for varts only
