--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -201,6 +201,11 @@ OUTPUT CONTROL
 	 BL base Surface ID: 81               # BLbaseSrfID; Set the surf ID in GUI
 	 Wedge Stiffness Factor: 1.0         # blfactor; used in elas solver
 
+# snap back to the parametric model surface
+# flag and surface ID
+     Snap back to surface option: False   # snapSurfFlag: False, True
+     Snap back to surface surf ID: 91     # snapSurfID; set one surf ID in GUI
+
      Ranks per core: 1 # for varts only
      Cores per node: 1 # for varts only
 # By default, with these 2 settings, 
