--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -205,6 +205,8 @@ OUTPUT CONTROL
 # flag and surface ID
      Snap back to surface option: False   # snapSurfFlag: False, True
      Snap back to surface surf ID: 91     # snapSurfID; set one surf ID in GUI
+     Time depended comp1_elas option: False   # timeDepComp1Flag: False, True
+     Time depended comp1_elas surf ID: 101    # timeDepComp1ID; set one surf ID in GUI
 
      Ranks per core: 1 # for varts only
      Cores per node: 1 # for varts only
