add m2g fields to phasta

--- a/phSolver/compressible/CMakeLists.txt
+++ b/phSolver/compressible/CMakeLists.txt
@@ -1,9 +1,10 @@
 file(GLOB SRC_FILES *.cc *.f *.f90 *.c)
 list(REMOVE_ITEM SRC_FILES "main.cc")
 
-if(PHASTA_CHEF_ENABLED)
-  list(REMOVE_ITEM SRC_FILES "dummyC.cc")
-  message(STATUS "removed dummy one")
+if(NOT PHASTA_CHEF_ENABLED)
+  set(SRC_FILES ${SRC_FILES} phastaChefDummy/dummyC.cc)
+#  list(REMOVE_ITEM SRC_FILES "dummyC.cc")
+  message(STATUS "use dummy function")
 endif()
 
 find_package(phastaCommon REQUIRED PATHS ${CMAKE_BINARY_DIR})
