use face tag instead of surf ID for snapping; check closure by calling to core

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -205,7 +205,8 @@ OUTPUT CONTROL
 # snap back to the parametric model surface
 # flag and surface ID
      Snap back to surface option: False   # snapSurfFlag: False, True
-     Snap back to surface surf ID: 91     # snapSurfID; set one surf ID in GUI
+     Snap back to surface number of face tags: 0  # snapNumFaceTags; number of face tags for snapping
+     Snap back to surface face tags: 91     # snapFaceTags; set one surf ID in GUI
      Time depended comp1_elas option: False   # timeDepComp1Flag: False, True
      Time depended comp1_elas surf ID: 101    # timeDepComp1ID; set one surf ID in GUI
 
