introduced eps_mu and eps_k

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -169,7 +169,9 @@ DG INTERFACE
      DG Interface Ramping Time:                1.0
      DG Interface Velocity Magnitude:          1.0
      DG Interface Kinematic Condition S:       1.0      # S coefficient in the 2nd term
-     DG Interface Penalty Factor epsilon:      1.0e-3
+     DG Interface Penalty Factor epsilon:      1.0e0
+     DG Interface Penalty Factor epsilon mu:   1.0e1
+     DG Interface Penalty Factor epsilon k:    1.0e2 
      DG Interface Penalty Factor h:            1.0e-2
 }
 
