add user-defined threshold for mesh quality

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -177,6 +177,13 @@ DG INTERFACE
 
 }
 
+Auto mesh adaptation trigger
+{
+     Auto Trigger Option: False                    # True, False
+     Threshold for Volume Mesh Quality:  0.2       # default = 0.2
+     Threshold for Face Mesh Quality in BL:  0.2   # default = 0.2
+}
+
 OUTPUT CONTROL
 {
      Number of Timesteps between Restarts: 500 #replaces nout/ntout
