change the default of jacobian stiffness option to off

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -151,7 +151,7 @@ MATERIAL PROPERTIES
 # damp vortices near outlet by ramping up viscosity
         Ramp Up Viscosity Near Outlet: 0        #irampViscOutlet
         Stretch X Coordinate Near Outlet: 0 #istretchOutlet
-     Mesh Elastic Youngs Modulus Volume Option: True # datelas_volume_YM; True; False
+     Mesh Elastic Youngs Modulus Volume Option: False # datelas_volume_YM; True; False
      Mesh Elastic Youngs Modulus: 1.0          # matdat.datelas(5,1,1) For mesh-elastic
      Mesh Elastic Poisson Ratio:  -0.1         # matdat.datelas(5,1,2) For mesh-elastic
 }
