write residual for 5 components. make it optional in solver.inp

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -230,6 +230,7 @@ OUTPUT CONTROL
 
      Data Block Format : binary #iotype, options 'binary','ascii'
      Conservation Probe: No
+     Write non-linear residual to restart: No   # Yes; No
 }
 
 LINEAR SOLVER
