make calls to core to update rigid body motion

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -207,6 +207,8 @@ OUTPUT CONTROL
 # this must be processed as in input.f or passed to input.f for processing
 # not read if nsrfCM=0
 
+     Number of rigid bodies: 0           # ntagRB
+     Model region tags for rigid bodies: NODEFAULT  # ntaglist
      Wedge Stiffness Factor: 1.0         # blfactor; used in elas solver
 
 # snap back to the parametric model surface
