add parameters, properties and constraints for rigid body

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -156,6 +156,14 @@ MATERIAL PROPERTIES
      Mesh Elastic Poisson Ratio:  -0.1         # matdat.datelas(5,1,2) For mesh-elastic
 }
 
+RIGID BODY
+{
+     Number of Rigid Bodies: 0
+     Rigid Body Tags:        88
+     Properties of Rigid Body 88: 15.0 1.0 0.0 0.0 # mass, (3 comps of translation direction)
+     Properties of Rigid Body Default: 15.0 1.0 0.0 0.0 # mass, (3 comps of translation direction)
+}
+
 DG INTERFACE
 {
      Phase Change Model:              Constant   # options: None, Constant, Clausius-Clapeyron, Vieille's-Burning
@@ -207,8 +215,6 @@ OUTPUT CONTROL
 # this must be processed as in input.f or passed to input.f for processing
 # not read if nsrfCM=0
 
-     Number of rigid bodies: 0           # ntagRB
-     Model region tags for rigid bodies: NODEFAULT  # ntaglist
      Wedge Stiffness Factor: 1.0         # blfactor; used in elas solver
 
 # snap back to the parametric model surface
