read rigid body motion mode from input file

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -160,6 +160,7 @@ RIGID BODY
 {
      Number of Rigid Bodies: 0
      Rigid Body Tags:        88
+     Rigid Body Motion Mode: Translation-only      # Translation-only, Rotation-only, Translation-Rotation
      Properties of Rigid Body 88: 15.0 1.0 0.0 0.0 # mass, (3 comps of translation direction)
      Properties of Rigid Body Default: 15.0 1.0 0.0 0.0 # mass, (3 comps of translation direction)
 }
