implement generalized alpha method for rigid body motion

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -293,6 +293,8 @@ DISCRETIZATION CONTROL
 #     Time Integration Rule for solid: Second Order # Second Order sets rinf_B next
 #     Time Integration Rho Infinity_B: 0.5          # rinf_B(1) Only used for 2nd order
 
+     Time Integration Rho Infinity for Rigid Body Motion: 0.5  # rhoinf_rb(1); Only used for 2nd order. Only 2nd order has been implemented for RBM
+
      Predictor at Start of Step : Same Velocity  # ipred=1 (more options later)
       Weak Form: SUPG # alternate is Galerkin only for compressible
      Flow Advection Form: Convective        # iconvflow=2
