--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -163,6 +163,7 @@ RIGID BODY
      Rigid Body Motion Mode: Translation-only      # Translation-only, Rotation-only, Translation-Rotation
      Properties of Rigid Body 88: 15.0 1.0 0.0 0.0 # mass, (3 comps of translation direction)
      Properties of Rigid Body Default: 15.0 1.0 0.0 0.0 # mass, (3 comps of translation direction)
+     Rigid Body Communicate Motion Option: False   # True; False
 }
 
 DG INTERFACE
