add option for repositioning method: apply it on interface only

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -227,6 +227,9 @@ OUTPUT CONTROL
      Time depended comp1_elas option: False   # timeDepComp1Flag: False, True
      Time depended comp1_elas surf ID: 101    # timeDepComp1ID; set one surf ID in GUI
 
+# apply repositioning method on all boundaries or interface only
+     Mesh repositioning base face option: All-Boundary  # All-Boundary, Interface-Only
+
      Ranks per core: 1 # for varts only
      Cores per node: 1 # for varts only
 # By default, with these 2 settings, 
