adding some user define flag

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -183,6 +183,8 @@ DG INTERFACE
      DG Interface Penalty Factor epsilon mu:   1.0e1
      DG Interface Penalty Factor epsilon k:    1.0e2 
      DG Interface Penalty Factor h:            1.0e-2
+     Interface Normal:                         Constant # Options:Constant, Weighted
+     Interface Discontinuity Capturing:        Off      # Options:On, Off
      DG Interface DC Factor:                   1.0e2
 
 }
